--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body {margin:0;height:2000px;}
 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br>
 	  Email: souchakrabor@cs.stonybrook.edu, Mobile: +1-6313206641<br>
 	  
-	   <a href="https://sourachakra.github.io/Resume/CV_Souradeep_2023.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>LinkedIn</b> </a>
+	   <a href="https://sourachakra.github.io/resources/Souradeep_CV.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>LinkedIn</b> </a>
 	</td></tr></tbody></table>
 
     <p>I am a Research Assistant at the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
@@ -195,7 +195,7 @@ body {margin:0;height:2000px;}
 		 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/IIT_Kharagpur_Logo.svg.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/iitkgp.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology, Kharagpur, India</b></span>
 	
@@ -268,7 +268,7 @@ body {margin:0;height:2000px;}
 	
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/IIT_Kharagpur_Logo.svg.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/iitkgp.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology Kharagpur, India</b></span>
 	
@@ -284,7 +284,7 @@ body {margin:0;height:2000px;}
 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.jpg">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
@@ -295,7 +295,7 @@ body {margin:0;height:2000px;}
 		
 	<table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.jpg">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
