--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@ body {margin:0;height:2000px;}
   <p>&nbsp;</p>
     <h2>Recent News</h2>
     
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2023</b>: 1 paper accepted to <a href="">IEEE WACV</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">IEEE Transactions on Multimedia </a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">IEEE ISBI</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="">MICCAI Workshop (MOVI)</a></li> 
-    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="">Computer Vision and Image Understanding</a></li>
-    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="">Journal of Visual Communication and Image Representation</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">IEEE WACV</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://biomedicalimaging.org/2022/">IEEE ISBI</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
+    <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a></li>
+    <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/journal-of-visual-communication-and-image-representation">Journal of Visual Communication and Image Representation</a></li>
     
 	
 
@@ -206,7 +206,7 @@ body {margin:0;height:2000px;}
 		 
   <table border="0" cellpadding="0" cellspacing="4">
 
-	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/nitdgp.png">
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/nidgp.png">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>National Institute of Technology, Durgapur, India</b></span>
 	
