--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USA</b></span>
 	
 	  <br><em> Under <a href=https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a> </em><br> 
-	  May 2019 - Present <a href="" style="color: #000000"><b>[Certificate]</b> </a>
+	  May 2019 - Present <a href="" style="color: #000000"> </a>
 	  
 	</td></tr></tbody></table>
 		 
@@ -239,7 +239,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
 	
 	  <br><em> Under <a href="https://engineering.ucsb.edu/people/yon-visell"><b>Prof. Yon Visell</b></a> </em><br> 
-	  Sept 2016 - May 2018 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  Sept 2016 - May 2018 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"> </a>
 	  
 	</td></tr></tbody></table>
 
@@ -250,7 +250,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Science, Bangalore, India</b></span>
 	
 	  <br><em> Under <a href="https://cds.iisc.ac.in/faculty/venky/"><b>Prof. R. Venkatesh Babu</b></a> </em><br> 
-	  November 2015 - May 2016 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  November 2015 - May 2016 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"> </a>
 	  
 	</td></tr></tbody></table>
 		 
@@ -261,7 +261,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Statistical Institute, Kolkata, India</b></span>
 	
 	  <br><em> Under <a href="https://www.isical.ac.in/~sankar/"><b>Prof. Sankar K. Pal</b></a> </em><br> 
-	  May 2010 - July 2011 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  May 2010 - July 2011 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"> </a>
 	  
 	</td></tr></tbody></table>
 
@@ -273,7 +273,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Institute of Technology Kharagpur, India</b></span>
 	
 	  <br><em>Under <a href="https://scholar.google.com/citations?user=5bXSZPYAAAAJ&hl=en"><b>Prof. Pabitra Mitra</b></a></em><br>
-	  June 2013 - April 2015 <a href="https://sourachakra.github.io/images/iitrcert.pdf" style="color: #000000"><b>[Certificate]</b> </a>
+	  June 2013 - April 2015 <a href="https://sourachakra.github.io/images/iitrcert.pdf" style="color: #000000"> </a>
 	</td></tr></tbody></table>
 
   <p></p>
@@ -421,7 +421,7 @@ frequency statistics</strong>
     <div class="publication">
     <p><strong style="color:#65696C;"> A site entropy rate and degree centrality based algorithm for image co-segmentation</strong>
     <br><b> Souradeep Chakraborty</b>, Pabitra Mitra
-    <br><b><em>Journal of Visual Communication and Image \newline Representation, Elsevier, Vol. 33, Nov. 2015, pp. 20-30</b>
+    <br><b><em>Journal of Visual Communication and Image Representation, Elsevier, Vol. 33, Nov. 2015, pp. 20-30</b>
     <br><a href="https://cse.iitkgp.ac.in/~pabitra/paper/jvcir15.pdf">[paper]</a>
     </p></div>
   </td>
