--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@ body {margin:0;height:2000px;}
     <h2>Recent News</h2>
     
     <li><sup><font color="red"><b>NEW</b></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">IEEE WACV</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>03/2022</b>: 1 paper accepted to <a href="https://jov.arvojournals.org/">Journal of Vision</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>01/2022</b>: 1 paper accepted to <a href="https://biomedicalimaging.org/2022/">IEEE ISBI</a></li>
+    <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
+    <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
+    <li><sup><font color="red"></font></sup> <b>03/2022</b>: 1 paper accepted to <a href="https://jov.arvojournals.org/">Journal of Vision</a></li>
+    <li><sup><font color="red"></font></sup> <b>01/2022</b>: 1 paper accepted to <a href="https://biomedicalimaging.org/2022/">IEEE ISBI</a></li>
     <li><sup><font color="red"></font></sup> <b>05/2016</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding">Computer Vision and Image Understanding</a></li>
     <li><sup><font color="red"></font></sup> <b>08/2015</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/journal-of-visual-communication-and-image-representation">Journal of Visual Communication and Image Representation</a></li>
     
