--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {margin:0;height:2000px;}
 
     <p>I am a Research Assistant in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
 
-    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. In the recent past, my focus has been on studying and predicting human visual attention. In the recent past, I have worked on predicting human visual attention on different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
+    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. In the recent past, my focus has been on studying and predicting human visual attention. In particular, I have worked on predicting human visual attention in different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
 	    Currently, I work in the area of digital pathology, with additional interests in the domain of
     self-supervised learning.</p>
 
