--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@ body {margin:0;height:2000px;}
 
     <p>I am a Research Assistant in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a>. </p>
 
-    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. In the recent past, my focus has been on studying and predicting human visual attention. In particular, I have worked on predicting human visual attention in different kinds of images including but not limited to natural images, webpages, graphic designs, whole slide images of cancer tissues, etc. 
-	    Currently, I work in the area of digital pathology, with additional interests in the domain of
-    self-supervised learning.</p>
+    <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. 
+	    In the recent past, my focus has been on studying and predicting human visual attention. 
+	    Specifically, I have developed deep learning models that can predict human visual attention in different kinds of images including but not limited to natural images, webpages, 
+	    graphic designs, whole slide images of cancer tissues, etc. I have also worked in the domains of generative AI and self-supervised segmentation.</p>
 
     <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics, Algorithms</p>
 
