--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {margin:0;height:2000px;}
 
     <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. 
 	    In the recent past, my focus has been on studying and predicting human visual attention. 
-	    Specifically, I have developed deep learning models that can predict human visual attention in different kinds of images including but not limited to natural images, webpages, 
+	    Specifically, I have developed deep learning models that can predict human visual attention in natural images, webpages, 
 	    graphic designs, whole slide images of cancer tissues, etc. I have also worked in the domains of generative AI and self-supervised segmentation.</p>
 
     <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics, Algorithms</p>
