--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body {margin:0;height:2000px;}
 	    Specifically, I have developed deep learning models that can predict human visual attention in natural images, webpages, 
 	    graphic designs, whole slide images of cancer tissues, etc. I have also worked in the domains of generative AI and self-supervised segmentation.</p>
 
-    <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics, Algorithms</p>
+    <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics</p>
 
     <p>Prior to joining Stony Brook University, I completed my Masters degree from UC Santa Barbara, USA and IIT Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from NIT Durgapur, India in Electronics and Communication Engineering.</p> 
   
