--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {margin:0;height:2000px;}
 	   <a href="https://sourachakra.github.io/resources/Souradeep_CV.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>LinkedIn</b> </a>
 	</td></tr></tbody></table>
 
-    <p>I am a Research Assistant in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the 
+    <p>Hello World! I am a Research Assistant in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the 
 	    supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras">Prof. Dimitris Samaras</a>. </p>
 
     <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. 
