--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>University of California Santa Barbara, USA</b></span>
 	
 	  <br><em>M.Sc in Electrical and Computer Engineering </em><br> 
-          Sept 2016 - June 2018
+          September 2016 - June 2018
 
 	</td></tr></tbody></table>
 		 
@@ -264,7 +264,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Indian Statistical Institute, Kolkata, India</b></span>
 	
 	  <br><em> Under <a href="https://www.isical.ac.in/~sankar/"><b>Prof. Sankar K. Pal</b></a> </em><br> 
-	  May 2010 - July 2011 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"> </a>
+	  May 2010 - July 2010 <a href="https://sourachakra.github.io/images/isicert.pdf" style="color: #000000"> </a>
 	  
 	</td></tr></tbody></table>
 
@@ -314,10 +314,10 @@ body {margin:0;height:2000px;}
 
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/cerner.png">
 
-	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Cerner Healthcare Pvt. Ltd., India</b></span>
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Cerner Healthcare, India</b></span>
 	
 	  <br><em>Software Engineer </em><br> 
-	  May 2015 - October 2015 
+	  May 2015 - November 2015 
 	  
 	</td></tr></tbody></table>
 
