--- a/index.html
+++ b/index.html
@@ -147,12 +147,13 @@ body {margin:0;height:2000px;}
 
     <p><font color="red"><b>Coursework:</b></font> Machine Learning, Computer Vision, Data Visualization, Computer Graphics</p>
 
-    <p>Prior to joining Stony Brook University, I completed my Masters degree from UC Santa Barbara, USA and IIT Kharagpur, India in the domain of signal processing. I completed by undergraduate degree from NIT Durgapur, India in Electronics and Communication Engineering.</p> 
+    <p>Prior to joining Stony Brook University, I completed my Masters degree from UC Santa Barbara, USA and IIT Kharagpur, India in the domain of signal processing. I completed my undergraduate degree from NIT Durgapur, India in Electronics and Communication Engineering.</p> 
   
   <br>
     <h2>Recent News</h2>
-    
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">IEEE WACV</a></li>
+		 
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>11/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MiCCAI</a></li>
+    <li><sup><font color="red"></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">IEEE WACV</a></li>
     <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
     <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
     <li><sup><font color="red"></font></sup> <b>03/2022</b>: 1 paper accepted to <a href="https://jov.arvojournals.org/">Journal of Vision</a></li>
