--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body {margin:0;height:2000px;}
   <br>
     <h2>Recent News</h2>
 		 
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>11/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MiCCAI</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>11/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MICCAI</a></li>
     <li><sup><font color="red"></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">IEEE WACV</a></li>
     <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
     <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
