--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@ body {margin:0;height:2000px;}
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
 	
+	  <br><em>Applied Scientist II </em><br> 
+	  December 2024 - Present
+	  
+	  </td></tr></tbody></table>
+		 
+	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.jpg">
+
+	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
+	
 	  <br><em>Applied Scientist Intern </em><br> 
 	  May 2023 - August 2023
 	  
