--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@ body {margin:0;height:2000px;}
 	  December 2024 - Present
 	  
 	  </td></tr></tbody></table>
-		 
+
+	<table border="0" cellpadding="0" cellspacing="4">
 	  <tbody><tr><td valign="top" rowspan="6"><img height="90" border="0" src="https://sourachakra.github.io/resources/amazon.jpg">
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Amazon, USA</b></span>
