--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><b>Stony Brook University, USA</b></span>
 	
 	  <br><em> Under <a href=https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras"><b>Prof. Dimitris Samaras</b></a> </em><br> 
-	  May 2019 - Present <a href="" style="color: #000000"> </a>
+	  May 2019 - December 2024 <a href="" style="color: #000000"> </a>
 	  
 	</td></tr></tbody></table>
 		 
