--- a/index.html
+++ b/index.html
@@ -130,15 +130,16 @@ body {margin:0;height:2000px;}
 
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><h1>Souradeep Chakraborty</h1></span><br>
 	
-	  6th year PhD candidate<br>
+	  Applied Scientist II, Amazon<br>
 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br>
-	  Email: souchakrabor@cs.stonybrook.edu, Mobile: +1-6313206641<br>
+	  Email: souradp@amazon.com, souchakrabor@cs.stonybrook.edu<br>
+	  Mobile: +1-6313206641<br>
 	  
 	   <a href="https://sourachakra.github.io/resources/Souradeep_CV.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>LinkedIn</b> </a>
 	</td></tr></tbody></table>
 
-    <p>Hello World! I am a Research Assistant in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the 
-	    supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras">Prof. Dimitris Samaras</a>. </p>
+    <p>Hello World! I am an Applied Scientist at Amazon in Seattle. Recently, I graduated from Stony Brook University with a PhD in Computer Science. I worked at the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) lab </a> at Stony Brook University under the 
+	    supervision of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras">Prof. Dimitris Samaras</a> and <a href="https://www.stonybrook.edu/commcms/psychology/faculty/faculty_profiles/gzelinsky">Prof. Gregory Zelinsky. </p>
 
     <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. 
 	    In the recent past, my focus has been on studying and predicting human visual attention. 
