--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {margin:0;height:2000px;}
 	  </td></tr><tr><td></td><td></td><td></td><td></td><td></td><td valign="top" colspan="2"><span class="h1"><h1>Souradeep Chakraborty</h1></span><br>
 	
 	  Applied Scientist II, Amazon<br>
-	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br>
+<!-- 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br> -->
 	  Email: souradp@amazon.com, souchakrabor@cs.stonybrook.edu<br>
 	  Mobile: +1-6313206641<br>
 	  
