--- a/index.html
+++ b/index.html
@@ -353,8 +353,22 @@ body {margin:0;height:2000px;}
  
 
 
-   <tbody>
-	   
+<tbody>
+
+<tr>
+  <td>
+    <img border="0" src="https://sourachakra.github.io/resources/eccv.png" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> Self-supervised Co-salient Object Detection via Feature Correspondences at Multiple Scales</strong>
+    <br><b> Souradeep Chakraborty</b>, Dimitris Samaras
+    <br><b><em>European Conference on Computer Vision (ECCV),</em> 2024.</b>
+    <br><a href="https://link.springer.com/chapter/10.1007/978-3-031-72673-6_13">[paper]</a>
+    </p></div>
+  </td>
+</tr>
+	
 <tr>
   <td>
     <img border="0" src="https://sourachakra.github.io/resources/wacv.png" classs="publogo" height="180" width="200">
