--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ body {margin:0;height:2000px;}
 
 <tr>
   <td>
-    <img border="0" src="https://sourachakra.github.io/resources/eccv.png" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/eccv1.PNG" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
