--- a/index.html
+++ b/index.html
@@ -368,6 +368,20 @@ body {margin:0;height:2000px;}
     </p></div>
   </td>
 </tr>
+
+<tr>
+  <td>
+    <img border="0" src="https://sourachakra.github.io/resources/miccai2024.png" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> Decoding the visual attention of pathologists to reveal their level of expertise</strong>
+    <br><b> Souradeep Chakraborty</b>, Rajarsi Gupta, Oksana Yaskiv, Constantin Friedman, Natallia Sheuka, Dana Perez, Paul Friedman, Gregory Zelinsky, Joel Saltz, Dimitris Samaras
+    <br><b><em>MICCAI,</em> 2024.</b>
+    <br><a href="https://link.springer.com/chapter/10.1007/978-3-031-72384-1_12">[paper]</a>
+    </p></div>
+  </td>
+</tr>
 	
 <tr>
   <td>
