--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body {margin:0;height:2000px;}
 	
 	  Applied Scientist II, Amazon<br>
 <!-- 	  <a href="https://www.cs.stonybrook.edu/"><b> Department of Computer Science, Stony Brook University </b> </a><br> -->
-	  Email: souradp@amazon.com, souchakrabor@cs.stonybrook.edu<br>
+	  Email: souchakrabor@cs.stonybrook.edu<br>
 	  Mobile: +1-6313206641<br>
 	  
 	   <a href="https://sourachakra.github.io/resources/Souradeep_CV.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>LinkedIn</b> </a>
