--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {margin:0;height:2000px;}
 	   <a href="https://sourachakra.github.io/resources/Souradeep_CV.pdf" style="color: #8D8988"><b>Resume</b> </a> • <a href="https://scholar.google.com/citations?user=ArQ0ruYAAAAJ&hl=en" style="color: #8D8988"><b>Google Scholar</b> </a> • <a href="https://github.com/sourachakra" style="color: #8D8988"><b>Github</b></a>  • <a href="https://www.linkedin.com/in/souradeep-chakraborty/" style="color: #8D8988"><b>LinkedIn</b> </a>
 	</td></tr></tbody></table>
 
-    <p> Hello World! I'm an Applied Scientist at Amazon in Seattle, specializing in Generative AI. I recently earned my PhD in Computer Science from Stony Brook University, where I conducted research in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) Lab</a> under the guidance of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras">Prof. Dimitris Samaras</a> and <a href="https://www.stonybrook.edu/commcms/psychology/faculty/faculty_profiles/gzelinsky">Prof. Gregory Zelinsky</a>.</p>
+    <p> Hello World! I'm an Applied Scientist at Amazon in Seattle, specializing in Generative AI. I earned my PhD in Computer Science from Stony Brook University in 2024, where I conducted research in the <a href="https://www3.cs.stonybrook.edu/~cvl/">Computer Vision (CV) Lab</a> under the guidance of <a href="https://www.cs.stonybrook.edu/people/faculty/dimitrissamaras">Prof. Dimitris Samaras</a> and <a href="https://www.stonybrook.edu/commcms/psychology/faculty/faculty_profiles/gzelinsky">Prof. Gregory Zelinsky</a>.</p>
 
     <p> <font color="red"><b>Research Interest:</b></font> My research interests lie in the areas of computer vision and machine learning. 
 	    In the recent past, my focus has been on studying and predicting human visual attention. 
@@ -152,8 +152,9 @@ body {margin:0;height:2000px;}
   <br>
     <h2>Recent News</h2>
 
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>07/2024</b>: 1 paper accepted to <a href="https://eccv.ecva.net/">ECCV 2024</a></li>
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>06/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MICCAI 2024</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2025</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/medical-image-analysis/">Medical Image Analysis (MEDIA), Impact Factor: 11.8</a></li>
+    <li><sup><font color="red"></font></sup> <b>07/2024</b>: 1 paper accepted to <a href="https://eccv.ecva.net/">ECCV 2024</a></li>
+    <li><sup><font color="red"></font></sup> <b>06/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MICCAI 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">WACV 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
     <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
