--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body {margin:0;height:2000px;}
   <br>
     <h2>Recent News</h2>
 
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2025</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/medical-image-analysis/">Medical Image Analysis (MEDIA), Impact Factor: 11.8</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2025</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/medical-image-analysis/">Medical Image Analysis (MEDIA) [Impact Factor: 11.8]</a></li>
     <li><sup><font color="red"></font></sup> <b>07/2024</b>: 1 paper accepted to <a href="https://eccv.ecva.net/">ECCV 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>06/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MICCAI 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">WACV 2024</a></li>
@@ -372,20 +372,6 @@ body {margin:0;height:2000px;}
 
 <tr>
   <td>
-    <img border="0" src="https://sourachakra.github.io/resources/miccai2024.png" classs="publogo" height="180" width="200">
-  </td>
-  <td>
-    <div class="publication">
-    <p><strong style="color:#65696C;"> Decoding the visual attention of pathologists to reveal their level of expertise</strong>
-    <br><b> Souradeep Chakraborty</b>, Rajarsi Gupta, Oksana Yaskiv, Constantin Friedman, Natallia Sheuka, Dana Perez, Paul Friedman, Gregory Zelinsky, Joel Saltz, Dimitris Samaras
-    <br><b><em>MICCAI,</em> 2024.</b>
-    <br><a href="https://link.springer.com/chapter/10.1007/978-3-031-72384-1_12">[paper]</a>
-    </p></div>
-  </td>
-</tr>
-	
-<tr>
-  <td>
     <img border="0" src="https://sourachakra.github.io/resources/wacv.png" classs="publogo" height="180" width="200">
   </td>
   <td>
@@ -395,6 +381,34 @@ frequency statistics</strong>
     <br><b> Souradeep Chakraborty</b>, Shujon Naha, Muhammet Bastan, Amit Kumar K C, Dimitris Samaras
     <br><b><em>IEEE Winter Conference on Applications of Computer Vision (WACV),</em> 2024.</b>
     <br><a href="https://openaccess.thecvf.com/content/WACV2024/papers/Chakraborty_Unsupervised_and_Semi-Supervised_Co-Salient_Object_Detection_via_Segmentation_Frequency_Statistics_WACV_2024_paper.pdf">[paper]</a>
+    </p></div>
+  </td>
+</tr>
+
+<tr>
+  <td>
+    <img border="0" src="https://sourachakra.github.io/resources/wacv.png" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> Measuring and Predicting Where and When Pathologists Focus their Visual Attention while Grading Whole Slide Images of Cancer</strong>
+    <br><b> Souradeep Chakraborty</b>et al.
+    <br><b><em>Medical Image Analysis</em> 2025.</b>
+    <br><a href="https://arxiv.org/abs/2508.01668">[paper]</a>
+    </p></div>
+  </td>
+</tr>
+	
+<tr>
+  <td>
+    <img border="0" src="https://sourachakra.github.io/resources/miccai2024.png" classs="publogo" height="180" width="200">
+  </td>
+  <td>
+    <div class="publication">
+    <p><strong style="color:#65696C;"> Decoding the visual attention of pathologists to reveal their level of expertise</strong>
+    <br><b> Souradeep Chakraborty</b>, Rajarsi Gupta, Oksana Yaskiv, Constantin Friedman, Natallia Sheuka, Dana Perez, Paul Friedman, Gregory Zelinsky, Joel Saltz, Dimitris Samaras
+    <br><b><em>MICCAI,</em> 2024.</b>
+    <br><a href="https://link.springer.com/chapter/10.1007/978-3-031-72384-1_12">[paper]</a>
     </p></div>
   </td>
 </tr>
