--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ frequency statistics</strong>
 
 <tr>
   <td>
-    <img border="0" src="https://sourachakra.github.io/resources/wacv.png" classs="publogo" height="180" width="200">
+    <img border="0" src="https://sourachakra.github.io/resources/281C1079-C787-45DD-B369-A90AD7B3CDF9.jpeg" classs="publogo" height="180" width="200">
   </td>
   <td>
     <div class="publication">
