--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body {margin:0;height:2000px;}
   <br>
     <h2>Recent News</h2>
 
-    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2025</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/medical-image-analysis/">Medical Image Analysis (MEDIA) [Impact Factor: 11.8]</a></li>
+    <li><sup><font color="red"><b>NEW</b></font></sup> <b>08/2025</b>: 1 paper accepted to <a href="https://www.sciencedirect.com/journal/medical-image-analysis/">Medical Image Analysis [Impact Factor: 11.8]</a></li>
     <li><sup><font color="red"></font></sup> <b>07/2024</b>: 1 paper accepted to <a href="https://eccv.ecva.net/">ECCV 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>06/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MICCAI 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">WACV 2024</a></li>
