--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@ body {margin:0;height:2000px;}
     <li><sup><font color="red"></font></sup> <b>07/2024</b>: 1 paper accepted to <a href="https://eccv.ecva.net/">ECCV 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>06/2024</b>: 1 paper accepted to <a href="https://conferences.miccai.org/2024/en/">MICCAI 2024</a></li>
     <li><sup><font color="red"></font></sup> <b>11/2023</b>: 1 paper accepted to <a href="https://wacv2024.thecvf.com/">WACV 2024</a></li>
-    <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia </a></li>
-    <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI)</a></li> 
-    <li><sup><font color="red"></font></sup> <b>03/2022</b>: 1 paper accepted to <a href="https://jov.arvojournals.org/">Journal of Vision</a></li>
+    <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE Transactions on Multimedia [Impact Factor: 9.7]</a></li>
+    <li><sup><font color="red"></font></sup> <b>07/2022</b>: 1 paper accepted to <a href="https://sites.google.com/view/movi2022">MICCAI Workshop (MOVI) 2022</a></li> 
+    <li><sup><font color="red"></font></sup> <b>03/2022</b>: 1 paper accepted to <a href="https://jov.arvojournals.org/">Journal of Vision [Impact Factor: 2.3]</a></li>
     <li><sup><font color="red"></font></sup> <b>01/2022</b>: 1 paper accepted to <a href="https://biomedicalimaging.org/2022/">IEEE ISBI</a></li>
     
 	
